# serializer version: 1
# name: test_load_gpx_file_to_df_empty_file
  list([
    tuple(
      <SchemaColumns.UUID: 'UUID'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.NAME: 'NAME'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>,
      datetime64[ns, UTC],
    ),
    tuple(
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>,
      dtype('float64'),
    ),
  ])
# ---
# name: test_load_gpx_file_to_df_empty_file.1
  list([
  ])
# ---
# name: test_load_gpx_file_to_df_trackpoints_without_time
  list([
    tuple(
      <SchemaColumns.UUID: 'UUID'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.NAME: 'NAME'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>,
      datetime64[ns, UTC],
    ),
    tuple(
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>,
      dtype('float64'),
    ),
  ])
# ---
# name: test_load_gpx_file_to_df_trackpoints_without_time.1
  list([
  ])
# ---
# name: test_load_gpx_file_to_df_valid_file
  list([
    tuple(
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>,
      datetime64[ns, UTC],
    ),
    tuple(
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>,
      dtype('float64'),
    ),
    tuple(
      <SchemaColumns.NAME: 'NAME'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.CAPTION: 'CAPTION'>,
      dtype('O'),
    ),
    tuple(
      <SchemaColumns.UUID: 'UUID'>,
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L0',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L1',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L2',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L3',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L4',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L5',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L6',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L7',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L8',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L9',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L10',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L11',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L12',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L13',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L14',
      dtype('O'),
    ),
    tuple(
      'BUCKETED_H3_L15',
      dtype('O'),
    ),
  ])
# ---
# name: test_load_gpx_file_to_df_valid_file.1
  list([
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b3bf',
      'BUCKETED_H3_L14': '8e283082800b397',
      'BUCKETED_H3_L15': '8f283082800b390',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      <SchemaColumns.CAPTION: 'CAPTION'>: nan,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.NAME: 'NAME'>: nan,
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>: 'test.gpx',
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>: '2023-01-01T12:00:00+00:00',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2023-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID: 'UUID'>: b'\xf5\x0c\xa1\xb8N\xf2Rw\xf2\x04\xea\xd8\xff\x90\x01\x0b',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b2ff',
      'BUCKETED_H3_L14': '8e283082800b2c7',
      'BUCKETED_H3_L15': '8f283082800b2c3',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      <SchemaColumns.CAPTION: 'CAPTION'>: nan,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.775,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4195,
      <SchemaColumns.NAME: 'NAME'>: nan,
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>: 'test.gpx',
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>: '2023-01-01T12:05:00+00:00',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2023-01-01 12:05:00+0000', tz='UTC'),
      <SchemaColumns.UUID: 'UUID'>: b'\xd8\xcc\x04\xe9\xea\xf6\xfa\xa8\xfc\x15\x8eg\xa8\xf6\x91\x8d',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830828057fff',
      'BUCKETED_H3_L11': '8b2830828056fff',
      'BUCKETED_H3_L12': '8c28308280565ff',
      'BUCKETED_H3_L13': '8d28308280564bf',
      'BUCKETED_H3_L14': '8e283082805648f',
      'BUCKETED_H3_L15': '8f2830828056488',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082807ffff',
      <SchemaColumns.CAPTION: 'CAPTION'>: 'A test waypoint',
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7751,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4196,
      <SchemaColumns.NAME: 'NAME'>: 'Test Waypoint',
      <SchemaColumns.SOURCE_FILE: 'SOURCE_FILE'>: 'test.gpx',
      <SchemaColumns.TIMESTAMP_MAYBE_TIMEZONE_AWARE: 'TIMESTAMP_MAYBE_TIMEZONE_AWARE'>: '2023-01-01T12:10:00+00:00',
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2023-01-01 12:10:00+0000', tz='UTC'),
      <SchemaColumns.UUID: 'UUID'>: b'\x0b\x12t\xcd\xb1\x96(1\xb4\xf6\x16ns"\x0e\xb8',
    }),
  ])
# ---
